--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body id="main">
     <main>
         <section id="container" class="words">
-            <p>Words</p>
+            <h1>Dog Parks Near You</h1>
+            <section class="parkList">
+            </section>
         </section>
         <section class="map">
             <div id="map"></div>
