--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <section id="container" class="words">
             <h1>Dog Parks Near You</h1>
             <section class="parkList">
+                <ul id="parkList"></ul>
             </section>
         </section>
         <section class="map">
