+ "keychain" for apis, changed list from UL to OL

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Grey's ARTDM 174 Lab 7</title>
+    <title>Grey's ARTDM 174 Project 4</title>
     <meta name="author" content="Grey Larrain Bratt">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
@@ -15,14 +15,14 @@
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
         integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
         crossorigin=""></script>
-    <script defer src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 <body id="main">
     <main>
         <section id="container" class="words">
             <h1>Dog Parks Near You</h1>
             <section class="parkList">
-                <ul id="parkList"></ul>
+                <ol id="parkList"></ol>
             </section>
         </section>
         <section class="map">
