updt keychain (- road), + cities db, + search f(x)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <section class="search">
                 <form>
                     <label for="search">
-                        Search by City
+                        Enter Your City
                         <input id="search"
                             type="search"
                             name="searchbar"
-                            placeholder="Alamo"></label>
-                    <button formmethod="get"
-                        formtarget="_top">Search</button>
+                            placeholder="San Francisco"></label>
+                    <a id="button" role="button" aria-roledescription="Submit"
+                        >Search</a>
                 </form>
             </section>
             <section class="parkList">
