--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="main">
     <main>
         <section id="container" class="words">
-            <h1>Dog Parks Near <span id="cityName">You</span></h1>
+            <h1>Dog Parks Near <span id="placeName">You</span></h1>
             <section class="search">
                 <form id="form">
                     <label for="search">
