- extraneous files, + data credits

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Grey's ARTDM 174 Project 4</title>
-    <meta name="author" content="Grey Larrain Bratt">
+    <meta name="author" content="Grey Larrain Bratt, Alex Maddox, Dorena Hinh">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
@@ -40,6 +40,10 @@
         <section class="map">
             <div id="map"></div>
         </section>
+        <footer>
+            <p>Park Data Provided By <a href="https://tomtom.com">TomTom</a></p>
+            <p>City Data Provided By <a href="https://countrystatecity.in">CountryStateCity</a></p>
+        </footer>
     </main>
 </body>
 </html>
