+ errors html & css box + associated catch js init

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             placeholder="San Francisco"></label>
                     <button id="button" type="submit"
                         >Search</button>
+                        <div id="errors"></div>
                 </form>
             </section>
             <section class="parkList">
